--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Case Study</title>
   </head>
   <body>
-    <div>
+    <div class="nav">
         <!-- main navigation -->
       <ul class="navigation-tl">
         <li class="navlinks-tl"><a class="li-tl li-a" href="index.html">Home</a></li>
@@ -41,8 +41,33 @@
         <a href="#" class="btn btn-primary">Vist the Original Website</a>
       </div>
     </div>
+    <!-- case study nav-->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Navbar</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Features</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Pricing</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
     <!-- Identify the Problem -->
-    <div class="card mb-3" style="max-width: 300px;">
+    <div class="card mb-3">
       <div class="row g-0">
         <div class="col-md-4">
           <img src="case study pics/identify.png">
